--- a/todo
+++ b/todo
@@ -20,6 +20,7 @@ Cambiar métodos de acceso al cluster: Transformar todo en ingress, quitar metal
 ---- Doing:
 
 Montar mqtt sobre http fuera de kubernetes --> No hace falta, se pueden exponer servicios tcp en el ingress. Probar con la red de casa.
+	Hay que modificar los archivos de microk8s en snap, y para ello hay que desmontar el sistema de archivos porque es de solo lectura
 Problemas con certificado: crear de 0 y cambiar CA dentro de la configuración del broker
 
 
