--- a/kubernetesFiles/ingress/README
+++ b/kubernetesFiles/ingress/README
@@ -16,3 +16,7 @@ modificamos lo que queramos y
 sudo mksquashfs squashfs-root microk8s_1668.snap
 sudo cp microk8s_1668.snap /var/lib/snapd/snaps/microk8s_1668.snap
 sudo mount -t squashfs -o ro,nodev,relatime,x-gdu.hide /var/lib/snapd/snaps/microk8s_1668.snap /snap/microk8s/1668
+
+PARA QUE LOS CAMBIOS TENGAN EFECTO (se actualicen los .yaml), VOLVER A EJECUTAR:
+microk8s.enable ingress
+
