--- a/todo
+++ b/todo
@@ -19,7 +19,8 @@ Cosas para mejorar la implementación:
 
 ---- Doing:
 
-Problemas con certificado (funciona en portatil pero no en torre ¿?): crear de 0 y cambiar CA dentro de la configuración del broker
+En la torre nos da fallo mk8 al intentar actualizar ingress, mirar linea 57		
+
 Mover la configuración TLS al broker interior en kubernetes
 	Se ha introducido de forma regulera, hacerlo ahora con configmaps?
 
@@ -33,6 +34,8 @@ Utilizar conexiones TLS con cert en el servidor
 		Hacer funcionar MQTT/TLS --> No hace falta sobre HTTP
 	Dentro de kubernetes:
 	Investigando sobre Metallb e Ingress --> Vamos a realizar el acceso al cluster por ingress, quitamos metallb.
+
+Problemas con certificado (funciona en portatil pero no en torre ¿?): crear de 0 y cambiar CA dentro de la configuración del broker--> arreglado
 
 Montar mqtt sobre http fuera de kubernetes --> No hace falta, se pueden exponer servicios tcp en el ingress. Probar con la red de casa.
 	Hay que modificar los archivos de microk8s en snap, y para ello hay que desmontar el sistema de archivos porque es de solo lectura --> ver comandos
