ended iot-sec branch

--- a/todo
+++ b/todo
@@ -2,25 +2,25 @@
 
 -----To do:
 
-Utilizar Ingress sin la opción ssl passthrough para las APIs
-	Crear un objeto de certificado en la API de kubernetes.
-	¿Hace falta uno por cada servicio, o con uno para el ingress esta bien?
-	Ver como adjuntar el objeto creado al ingress.
-	¿Quitar el tls interno que ya existe? Ver si colisiona o algo parecido. Si no colisiona, lo dejamos.
+Actualizar README y guia de instalacion, dejar bonito y hacer merge con la rama principal
 
-Utilizar configmaps a la hora de mandar archivos y ¿comandos? a las imagenes, asi no tenemos que crear imagenes personalizadas
+
+Utilizar configmaps a la hora de mandar archivos a las imagenes, asi no tenemos que crear imagenes personalizadas
 
 ---- Doing:
 
-Utilizar Ingress sin la opción ssl passthrough para las APIs
-	Crear un objeto de certificado en la API de kubernetes.
-	¿Hace falta uno por cada servicio, o con uno para el ingress esta bien? --> Con uno esta bien, accedemos segun el path a los servicios, por lo que lo podemos considerar un solo servidor
-
+¿Quitar el tls interno que ya existe? Ver si colisiona o algo parecido. Si no colisiona, lo dejamos.
 
 ---- Dudas:
 Como saber que ip/nombre de dns poner en el certificado?
 
 -----DONE:
+
+Utilizar Ingress sin la opción ssl passthrough para las APIs
+	Crear un objeto de certificado en la API de kubernetes.
+	¿Hace falta uno por cada servicio, o con uno para el ingress esta bien? --> Con uno es suficiente, accedemos a los servicios con diferentes paths, no con diferentes IPs
+	Ajuntar el objeto creado al ingress.
+	
 
 Añadir seguridad en la conexión con los dispositivos MQTT
 	Fuera de kubernetes:
