--- a/todo
+++ b/todo
@@ -2,26 +2,29 @@
 
 -----To do:
 
-Añadir NodeRED al proyecto
-	Investigar nodos disponibles y como añadir nodos
-	Investigar que hay dentro de la imagen de node red
-	Investigar que protocolo seguir para imitar objeto IoT de Fiware --> Tener en cuenta que queremos implementar varios tipos de comunicación en funcion de la plataforma que nos conectemos
-		Investigar NGSI y sus modulos en NodeRED --> mirar knowage, parecec algo similar a MQTTfx
-		Ver como crear una identidad a traves de NGSI
+Añadir conexión con distintas plataformas de IoT.
+	Añadir NodeRED al proyecto
+		Investigar nodos disponibles y como añadir nodos
+		Investigar que hay dentro de la imagen de node red
+		Investigar que protocolo seguir para imitar objeto IoT de Fiware --> Tener en cuenta que queremos implementar varios tipos de comunicación en funcion de la plataforma que nos conectemos
 
-	IDEA: bajar un fiware orion broker y comprobar realmente si las cosas se estan haciendo bien
+	Investigar que protocolo seguir para imitar objeto IoT de Fiware
+	
+	
 
-Investigar que protocolo seguir para imitar objeto IoT de Fiware
+---- Doing:
 
----- Dudas:
-Como saber que ip/nombre de dns poner en el certificado?
+Añadir conexión con distintas plataformas de IoT.
+	Conectar nodeRED fuera con orion broker
+		Investigar api NGSI para ver como funciona
+		
+		
+
 
 -----DONE:
 
-Utilizar Ingress sin la opción ssl passthrough para las APIs
-	Crear un objeto de certificado en la API de kubernetes.
-	¿Hace falta uno por cada servicio, o con uno para el ingress esta bien? --> Con uno es suficiente, accedemos a los servicios con diferentes paths, no con diferentes IPs
-	Ajuntar el objeto creado al ingress.
+	Configurar un fiware onion broker para conectarnos realmente, no solo construir teoricamente la salida
+	Instalar nodeRED y nodos NGSI fuera
 	
 
 Añadir seguridad en la conexión con los dispositivos MQTT
@@ -34,22 +37,24 @@ Añadir seguridad en la conexión con los dispositivos MQTT
 			La manera correcta seria utilizar configmaps para poder hacer las aplicaciones escalables a varios nodos, pero usando un solo nodo asi es mas facil
 		Añadir TLS + usr/pwd al broker --> hecho
 		Hay que cambiar el connector python de dentro del cluster para que use tls y un usuario autorizado --> hecho
-		Hay que crear un nuevo certificado para el broker y que uno de sus nombres de dns sea la direccion que utilia dentro de kubernetes --> hecho		
-
-Montar mqtt sobre http fuera de kubernetes --> No hace falta, se pueden exponer servicios tcp en el ingress. Probar con la red de casa.
+		Hay que crear un nuevo certificado para el broker y que uno de sus nombres de dns sea la direccion que utilia dentro de kubernetes --> hecho
+		
+	Utilizar Ingress sin la opción ssl passthrough para las APIs
+	Crear un objeto de certificado en la API de kubernetes.
+	¿Hace falta uno por cada servicio, o con uno para el ingress esta bien? --> Con uno es suficiente, accedemos a los servicios con diferentes paths, no con diferentes IPs
+	Ajuntar el objeto creado al ingress.
+	
+	Montar mqtt sobre http fuera de kubernetes --> No hace falta, se pueden exponer servicios tcp en el ingress. Probar con la red de casa.
 	Hay que modificar los archivos de microk8s en snap, y para ello hay que desmontar el sistema de archivos porque es de solo lectura --> ver comandos
 	Hay que arreglar conectarse al servicio tcp expuesto --> habia que volver a activar el addon ingress de microk8s para que se actualizaran los yaml modificados
 	Probar a acceder desde otro dispositivo en la red de casa a los servicios expuestos en el pc. --> funciona en portatil, no en torre (esta pendiente)
+	
+	Problemas con certificado (funciona en portatil pero no en torre ¿?): crear de 0 y cambiar CA dentro de la configuración del broker--> arreglado
 
-Problemas con certificado (funciona en portatil pero no en torre ¿?): crear de 0 y cambiar CA dentro de la configuración del broker--> arreglado
-
-En la torre da fallo mk8 al intentar actualizar ingress, mirar linea 57
+	En la torre da fallo mk8 al intentar actualizar ingress, mirar linea 57
 	Hacer snap info microk8s y comparar con portatil --> habia una version distinta de microk8s, se ha actualizado.
 
-Actualizar README y guia de instalacion, dejar bonito y hacer merge con la rama principal
-
-
-
+	Actualizar README y guia de instalacion, dejar bonito y hacer merge con la rama principal
 	
 
 --------------------------------------- Curso 19/20 TFG ENTREGADO ---------------------------------------
