added some yaml

--- a/todo
+++ b/todo
@@ -16,6 +16,8 @@ Añadir conexión con distintas plataformas de IoT.
 	Que es knowage? Parece extraer y exponer gráficamente los datos del orion broker
 	Mirar IoT Agent for JSON
 	
+Hacer un script para subir las cosas a github automaticamente
+	
 	
 
 ---- Doing:
