changing priv module

--- a/todo
+++ b/todo
@@ -16,13 +16,13 @@ Mejora de las políticas de privacidad
 	Crear entorno de pruebas fuera del cluster
 		Reprogramar el nuevo esquema
 			Empezamos por action_type y privacy_method, que es mas o menos la funcionalidad que tenemos
-			Despues cambiamos para que la query se coja desde resource y filter. Para ello vamos a implementar INTERSECT en mysql
-				Empezamos utilizando solo la query definida en la regla
-				Luego cambiamos para aceptar que el usuario meta querys desde fuera, y probamos a hacer la interseccion simple
-					Habria que comprobar las columnas que se permiten sacar al usuario y las que el esta pidiendo obtener
-					Habria que comprobar que SQL hace bien la comprobación de filas con los WHERE, maybe solo para el segundo paso?
-				Luego pasamos a comprobar si hay WHERE en la query del usuario y en la definida en las reglas y en función de eso utilizar una implementación u otra		
-		MIRAR COMO FUNCIONA EL ALGORITMO GEN Y VER SI PUDEO CAMBIAR PARA QUE SE HAGA SOBRE LA QUERY QUE YO SOLICITO.
+			Despues cambiamos para que la query se coja desde resource y filter. Para ello vamos a implementar unas VIEWS de SQL
+				Hay que unir los datos recogidos de exact y noise mediante la id, para ello meter id en todas las views y querys y luego habra que quitarlas
+				Despues tendremos que adaptar el metodo gen para que siga funcionando como ahora, y con eso se lo podrias presentar a los tutore
+				Y a ver que te proponen, propon tu buscar un mejor metodo de anonimizacion.
+					Intentar hacerlo mediante llamadas desde js, no con comunicaciones a otro nodo.
+					
+		COMO FUNCIONA EL ALGORITMO GEN Y VER SI PUDEO CAMBIAR PARA QUE SE HAGA SOBRE LA QUERY QUE YO SOLICITO.
 		ESTO CUANDO YA FUNCIONE TODO
 
 
@@ -31,8 +31,7 @@ Mejora de las políticas de privacidad
 	Crear entorno de pruebas fuera del cluster
 		Reprogramar el nuevo esquema
 			Empezamos por action_type y privacy_method, que es mas o menos la funcionalidad que tenemos
-			Despues cambiamos para que la query se coja desde resource y filter. Para ello vamos a implementar INTERSECT en mysql
-				Empezamos utilizando solo la query definida en la regla	
+			Despues cambiamos para que la query se coja desde resource y filter. Para ello vamos a implementar unas VIEWS de SQL	
 
 Añadir conexión con distintas plataformas de IoT.
 	Implementar la APi para Fiware --> nodeRed
