changing priv module

--- a/todo
+++ b/todo
@@ -22,6 +22,8 @@ Mejora de las políticas de privacidad
 				Y a ver que te proponen, propon tu buscar un mejor metodo de anonimizacion.
 					Intentar hacerlo mediante llamadas desde js, no con comunicaciones a otro nodo.
 					
+					HE DEJADO ALGO A MEDIAS
+					
 		COMO FUNCIONA EL ALGORITMO GEN Y VER SI PUDEO CAMBIAR PARA QUE SE HAGA SOBRE LA QUERY QUE YO SOLICITO.
 		ESTO CUANDO YA FUNCIONE TODO
 
