--- a/todo
+++ b/todo
@@ -14,10 +14,13 @@ Mejora de las políticas de privacidad
 
 Mejora de las políticas de privacidad
 	Crear entorno de pruebas fuera del cluster
-		Reprogramar el nuevo esquema
-			Configurar para que solo se puedan hacer las querys en el horario determinado.
-			Cambiar el rol de nombre del archivo a campo dentro del json?					
-
+		Reprogramar el nuevo esquema			
+			Cambiar el rol de nombre del archivo a campo dentro del json?
+				Podria cambiar solo la forma de lecutra, y dejar el esquema que tengo dentro ahora mismo
+					VENTAJAS: cambiar mucho menos codigo
+					DESVENTAJAS: cada vez que se realiza una query, se comprueba si se han modificado o no, y seria mas costoso
+						no tiene que ser mas costoso si guardamos en una variable una copia de la lectura tal cual
+			
 -----DONE:
 
 Mejora de las políticas de privacidad
@@ -31,6 +34,9 @@ Mejora de las políticas de privacidad
 			Implementar control de numero de peticiones realizadas
 				Cambiamos el modulo de auth para que en el jwt este también el id de usuario con el que llevaremos la cuenta de los intentos.
 					Hay que hacer las funciones para actualiar los contadores y anotar si ha sobrepasado el maximo.
+					
+			Configurar para que solo se puedan hacer las querys en el horario determinado.			
+			Arreglar parametros opcionales, algunos no son obligatorios. Para ello, comprobar si estan definidos dentro del js
 				
 
 Añadir conexión con distintas plataformas de IoT.
